; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_colors_add_id.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_colors_add_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.colors = type { i32*, i32 }
%struct.id_color = type { i32 }

@INSERT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.colors*, i8*, i64)* @colors_add_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @colors_add_id(%struct.colors* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.colors*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.id_color*, align 8
  %8 = alloca i8**, align 8
  store %struct.colors* %0, %struct.colors** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call %struct.id_color* @id_color_new(i8* %9, i64 %10)
  store %struct.id_color* %11, %struct.id_color** %7, align 8
  %12 = load %struct.colors*, %struct.colors** %4, align 8
  %13 = getelementptr inbounds %struct.colors, %struct.colors* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.id_color*, %struct.id_color** %7, align 8
  %16 = load i32, i32* @INSERT, align 4
  %17 = call i8** @htab_find_slot(i32 %14, %struct.id_color* %15, i32 %16)
  store i8** %17, i8*** %8, align 8
  %18 = load i8**, i8*** %8, align 8
  %19 = icmp ne i8** %18, null
  br i1 %19, label %20, label %35

20:                                               ; preds = %3
  %21 = load i8**, i8*** %8, align 8
  %22 = load i8*, i8** %21, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %35

24:                                               ; preds = %20
  %25 = load %struct.id_color*, %struct.id_color** %7, align 8
  %26 = bitcast %struct.id_color* %25 to i8*
  %27 = load i8**, i8*** %8, align 8
  store i8* %26, i8** %27, align 8
  %28 = load %struct.colors*, %struct.colors** %4, align 8
  %29 = getelementptr inbounds %struct.colors, %struct.colors* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = load i64, i64* %6, align 8
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %32, align 4
  br label %38

35:                                               ; preds = %20, %3
  %36 = load %struct.id_color*, %struct.id_color** %7, align 8
  %37 = call i32 @id_color_delete(%struct.id_color* %36)
  br label %38

38:                                               ; preds = %35, %24
  ret void
}

declare dso_local %struct.id_color* @id_color_new(i8*, i64) #1

declare dso_local i8** @htab_find_slot(i32, %struct.id_color*, i32) #1

declare dso_local i32 @id_color_delete(%struct.id_color*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
